// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileViewer/BinaryFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        0
         lines · 
        24.0 KB
      </span>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-6 rounded-[min(var(--radius-md),8px)] in-data-[slot=button-group]:rounded-md [&_svg:not([class*='size-'])]:size-3"
        data-slot="button"
        tabindex="0"
        title="Copy"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="text-muted-foreground px-4 py-8 text-center text-sm"
    >
      Binary file — 
      24.0 KB
    </div>
  </div>
</div>
`;

exports[`FileViewer/Loading matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="bg-muted/40 border-border flex items-center justify-between border-b px-4 py-2"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-32"
        data-slot="skeleton"
      />
    </div>
    <div
      class="flex"
    >
      <div
        class="flex flex-col items-end gap-1 px-3 py-3"
      >
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
      </div>
      <div
        class="flex flex-1 flex-col gap-1 py-3 pr-4"
      >
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 30%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 77%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 64%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 51%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 38%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 85%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 72%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 59%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 46%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 33%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FileViewer/TruncatedFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        4
         lines · 
        1.0 MB
         · truncated
      </span>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-6 rounded-[min(var(--radius-md),8px)] in-data-[slot=button-group]:rounded-md [&_svg:not([class*='size-'])]:size-3"
        data-slot="button"
        tabindex="0"
        title="Copy"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="_code-block_26d040"
    >
      <div
        class="_code-content_26d040"
      >
        <pre
          class="shiki shiki-themes github-light github-dark github-dark-dimmed"
          style="--shiki-light: #24292e; --shiki-dark: #e1e4e8; --shiki-dimmed: #adbac7; --shiki-light-bg: #fff; --shiki-dark-bg: #24292e; --shiki-dimmed-bg: #22272e;"
          tabindex="0"
        >
          <code>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="1"
              >
                1
              </span>
              <span>
                line 1
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="2"
              >
                2
              </span>
              <span>
                line 2
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="3"
              >
                3
              </span>
              <span>
                line 3
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="4"
              >
                4
              </span>
              <span>
                ... (truncated)
              </span>
              

            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileViewer/TypeScriptFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        18
         lines · 
        312 B
      </span>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-6 rounded-[min(var(--radius-md),8px)] in-data-[slot=button-group]:rounded-md [&_svg:not([class*='size-'])]:size-3"
        data-slot="button"
        tabindex="0"
        title="Copy"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="_code-block_26d040"
    >
      <div
        class="_code-content_26d040"
      >
        <pre
          class="shiki shiki-themes github-light github-dark github-dark-dimmed"
          style="--shiki-light: #24292e; --shiki-dark: #e1e4e8; --shiki-dimmed: #adbac7; --shiki-light-bg: #fff; --shiki-dark-bg: #24292e; --shiki-dimmed-bg: #22272e;"
          tabindex="0"
        >
          <code>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="1"
              >
                1
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                import
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                 { useState } 
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                from
              </span>
              <span
                style="--shiki-light: #032F62; --shiki-dark: #9ECBFF; --shiki-dimmed: #96D0FF;"
              >
                 "react"
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                ;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="2"
              >
                2
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="3"
              >
                3
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                interface
              </span>
              <span
                style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #F69D50;"
              >
                 CounterProps
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                 {
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="4"
              >
                4
              </span>
              <span
                style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
              >
                  initial
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                ?:
              </span>
              <span
                style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
              >
                 number
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                ;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="5"
              >
                5
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                }
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="6"
              >
                6
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="7"
              >
                7
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                export
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                 function
              </span>
              <span
                style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #DCBDFB;"
              >
                 Counter
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                ({ 
              </span>
              <span
                style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
              >
                initial
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                 =
              </span>
              <span
                style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
              >
                 0
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                 }
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                :
              </span>
              <span
                style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #F69D50;"
              >
                 CounterProps
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                ) {
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="8"
              >
                8
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                  const
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                 [
              </span>
              <span
                style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
              >
                count
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                , 
              </span>
              <span
                style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
              >
                setCount
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                ] 
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                =
              </span>
              <span
                style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #DCBDFB;"
              >
                 useState
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                (initial);
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="9"
              >
                9
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="10"
              >
                10
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                  return
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                 (
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="11"
              >
                11
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                    &lt;
              </span>
              <span
                style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
              >
                div
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &gt;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="12"
              >
                12
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                      &lt;
              </span>
              <span
                style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
              >
                p
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &gt;Count: 
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #F47067;"
              >
                {
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                count
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #F47067;"
              >
                }
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &lt;/
              </span>
              <span
                style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
              >
                p
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &gt;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="13"
              >
                13
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                      &lt;
              </span>
              <span
                style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
              >
                button
              </span>
              <span
                style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #6CB6FF;"
              >
                 onClick
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                =
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #F47067;"
              >
                {
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                () 
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                =&gt;
              </span>
              <span
                style="--shiki-light: #6F42C1; --shiki-dark: #B392F0; --shiki-dimmed: #DCBDFB;"
              >
                 setCount
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                (
              </span>
              <span
                style="--shiki-light: #E36209; --shiki-dark: #FFAB70; --shiki-dimmed: #F69D50;"
              >
                c
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                 =&gt;
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                 c 
              </span>
              <span
                style="--shiki-light: #D73A49; --shiki-dark: #F97583; --shiki-dimmed: #F47067;"
              >
                +
              </span>
              <span
                style="--shiki-light: #005CC5; --shiki-dark: #79B8FF; --shiki-dimmed: #6CB6FF;"
              >
                 1
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                )
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #F47067;"
              >
                }
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &gt;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="14"
              >
                14
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                        Increment
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="15"
              >
                15
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                      &lt;/
              </span>
              <span
                style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
              >
                button
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &gt;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="16"
              >
                16
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                    &lt;/
              </span>
              <span
                style="--shiki-light: #22863A; --shiki-dark: #85E89D; --shiki-dimmed: #8DDB8C;"
              >
                div
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                &gt;
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="17"
              >
                17
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                  );
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="18"
              >
                18
              </span>
              <span
                style="--shiki-light: #24292E; --shiki-dark: #E1E4E8; --shiki-dimmed: #ADBAC7;"
              >
                }
              </span>
              

            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;
